Add user roles and implement patient registration functionality