@@ -1,6 +1,7 @@
 package com.cliniquedigitale.controllers;
 
-import com.cliniquedigitale.entities.User;
+import com.cliniquedigitale.DTO.UserDTO;
+import com.cliniquedigitale.Enums.Role;
 import com.cliniquedigitale.service.AuthService;
 import jakarta.inject.Inject;
 import jakarta.servlet.ServletException;
@@ -11,6 +12,7 @@ import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpSession;
 
 import java.io.IOException;
+import java.time.LocalDate;
 
 @WebServlet("/auth/*")
 public class AuthServlet extends HttpServlet {
@@ -22,11 +24,9 @@ public class AuthServlet extends HttpServlet {
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
 
-
         String path = request.getPathInfo();
 
-
-        if (path == null || "/".equals(path) || "".equals(path)) {
+        if (path == null || "/".equals(path) || path.isEmpty()) {
             request.getRequestDispatcher("/WEB-INF/view/auth/login.jsp").forward(request, response);
             return;
         }
@@ -35,6 +35,14 @@ public class AuthServlet extends HttpServlet {
             request.getRequestDispatcher("/WEB-INF/view/auth/login.jsp").forward(request, response);
         } else if ("/register".equals(path)) {
             request.getRequestDispatcher("/WEB-INF/view/auth/register.jsp").forward(request, response);
+        } else if ("/logout".equals(path)){
+            HttpSession session = request.getSession();
+
+            if (session != null) {
+                session.invalidate();
+            }
+            response.sendRedirect(request.getContextPath() + "/auth/login?logout=1");
+
         } else {
             response.sendError(HttpServletResponse.SC_NOT_FOUND);
         }
@@ -44,7 +52,7 @@ public class AuthServlet extends HttpServlet {
     protected void doPost(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
         String path = request.getPathInfo();
-        if (path == null || "/".equals(path) || "".equals(path)) {
+        if (path == null || "/".equals(path) || path.isEmpty()) {
             response.sendError(HttpServletResponse.SC_BAD_REQUEST);
             return;
         }
@@ -55,36 +63,60 @@ public class AuthServlet extends HttpServlet {
             String email = request.getParameter("email");
             String password = request.getParameter("password");
 
-            User user = authService.Login( email, password );
+            UserDTO user = authService.Login( email, password );
 
-
-            if (user != null ) {
-                session.setAttribute("user", email);
-                response.sendRedirect(request.getContextPath() + "/");
+            if ( user != null ) {
+                session.setAttribute("user", user);
+                switch(user.getRole()){
+                    case ADMIN -> response.sendRedirect(request.getContextPath() + "/admin");
+                    case PATIENT -> response.sendRedirect(request.getContextPath() + "/patient");
+                    case DOCTOR ->  response.sendRedirect(request.getContextPath() + "/doctor");
+                    case STAFF -> response.sendRedirect(request.getContextPath() + "/staff");
+                }
             } else {
                 response.sendRedirect(request.getContextPath() + "/auth/login?error=1");
             }
 
         } else if ("/register".equals(path)) {
             String name = request.getParameter("name");
-             String email = request.getParameter("email");
+            String email = request.getParameter("email");
             String password = request.getParameter("password");
-            String confirm = request.getParameter("confirm");
-            
+            String cin = request.getParameter("cin");
+            String naissanceStr = request.getParameter("naissance");
+            String sexe = request.getParameter("sexe");
+            String adresse = request.getParameter("adresse");
+            String telephone = request.getParameter("telephone");
+            String sang = request.getParameter("sang");
 
 
-            if (email == null || email.isBlank() || password == null || password.length() < 6 || !password.equals(confirm)) {
-                response.sendRedirect(request.getContextPath() + "/auth/register?error=1");
+            if (name == null || name.trim().isEmpty() ||
+                email == null || email.trim().isEmpty() ||
+                password == null || password.length() < 6 ||
+                cin == null || cin.trim().isEmpty() ||
+                naissanceStr == null || naissanceStr.trim().isEmpty() ||
+                sexe == null || sexe.trim().isEmpty() ||
+                telephone == null || telephone.trim().isEmpty()) {
+                response.sendRedirect(request.getContextPath() + "/auth/register?error=validation");
                 return;
             }
 
-            session.setAttribute("registeredEmail", email);
-            session.setAttribute("registeredPassword", password);
-            session.setAttribute("registeredName", name);
+            LocalDate naissance;
+            try {
+                naissance = LocalDate.parse(naissanceStr);
+            } catch (Exception e) {
+                response.sendRedirect(request.getContextPath() + "/auth/register?error=invaliddate");
+                return;
+            }
+
+            UserDTO created = authService.registerPatient(name, email, password, cin, naissance, sexe, adresse, telephone, sang);
+            if (created == null) {
+                response.sendRedirect(request.getContextPath() + "/auth/register?error=exists");
+                return;
+            }
 
             response.sendRedirect(request.getContextPath() + "/auth/login?registered=1");
 
-        } else {
+        }else {
             response.sendError(HttpServletResponse.SC_NOT_FOUND);
         }
     }
